force-app/main/default/objects/Job_Posting__c/fields/Job_Posted_On__c.field-meta.xml
<CustomField>
    <fullName>Job_Posted_On__c</fullName>
    <label>Job Posted On</label>
    <type>Date</type>
</CustomField>