force-app/main/default/objects/Job_Posting__c/fields/Maximum_Salary__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Salary__c</fullName>
    <label>Maximum Salary</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>