force-app/main/default/objects/Job_Posting__c/fields/Recruitment_Manager__c.field-meta.xml
<CustomField>
    <fullName>Recruitment_Manager__c</fullName>
    <label>Recruitment Manager</label>
    <type>TextArea</type>
</CustomField>