force-app/main/default/objects/Job_Posting__c/fields/Sell_Rate__c.field-meta.xml
<CustomField>
    <fullName>Sell_Rate__c</fullName>
    <formula>TEXT(Currency__c) &amp; &quot;/&quot; &amp; TEXT(Client_Bill_Rate__c) &amp; &quot;/&quot; &amp; TEXT(Pay_Period__c) &amp; &quot;/&quot; &amp; TEXT(Employment_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sell Rate</label>
    <type>Text</type>
</CustomField>