force-app/main/default/objects/Job_Posting__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <label>Skills</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>