force-app/main/default/objects/Job_Posting__c/validationRules/Job_Posted_On_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Job_Posted_On_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(),
Job_Posted_On__c &lt;&gt; TODAY()
)</errorConditionFormula>
    <errorDisplayField>Job_Posted_On__c</errorDisplayField>
    <errorMessage>The Job Posted date must be current date.</errorMessage>
</ValidationRule>