force-app/main/default/objects/Job_Posting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Job_Title__c</columns>
    <columns>Vendor_Account__c</columns>
    <columns>Client_Account__c</columns>
    <columns>Client_Bill_Rate__c</columns>
    <columns>Pay_Rate__c</columns>
    <columns>Job_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Job_Posted_On__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>